--- a/pos_v2/SpecRunner.html
+++ b/pos_v2/SpecRunner.html
@@ -14,9 +14,11 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="src/model/item.js"></script>
     <script type="text/javascript" src="src/model/promotion.js"></script>
+    <script type="text/javascript" src="src/model/order.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
+    <script type="text/javascript" src="src/underscore.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/main-spec.js"></script>
