--- a/pos_v2/SpecRunner.html
+++ b/pos_v2/SpecRunner.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="../lib/jasmine-2.0.1/jasmine_favicon.png">
     <link rel="stylesheet" type="text/css" href="../lib/jasmine-2.0.1/jasmine.css">
 
+    <script type="text/javascript" src="../lib/lodash-2.4.1/lodash.compat.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine-html.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/boot.js"></script>
@@ -18,7 +19,6 @@
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
-    <script type="text/javascript" src="src/underscore.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/main-spec.js"></script>
