使用 MomentJS 来获取时间

--- a/pos_v2/SpecRunner.html
+++ b/pos_v2/SpecRunner.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../lib/jasmine-2.0.1/jasmine.css">
 
     <script type="text/javascript" src="../lib/lodash-2.4.1/lodash.compat.js"></script>
+    <script type="text/javascript" src="../lib/moment-2.8.1/moment-with-locales.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine-html.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/boot.js"></script>
