Rename: Promotion -> Discount

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -15,7 +15,7 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="src/Models/item.js"></script>
-    <script type="text/javascript" src="src/Models/promotion.js"></script>
+    <script type="text/javascript" src="src/Models/discount.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
