Move something from models to helpers

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -15,14 +15,14 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="src/Models/item.js"></script>
-    <script type="text/javascript" src="src/Models/discount.js"></script>
+    <script type="text/javascript" src="src/Helpers/discount.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/Models/item-spec.js"></script>
-    <script type="text/javascript" src="spec/Models/discount-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/discount-spec.js"></script>
 
 </head>
 
