Seperate scope to a independant class

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -16,6 +16,7 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="src/Models/item.js"></script>
     <script type="text/javascript" src="src/Helpers/discount.js"></script>
+    <script type="text/javascript" src="src/Helpers/scope.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
