--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -24,7 +24,7 @@
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/Models/item-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/discount-spec.js"></script>
-
+    <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
 </head>
 
 <body>
