--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -16,6 +16,7 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="src/Models/item.js"></script>
     <script type="text/javascript" src="src/Helpers/discount.js"></script>
+    <script type="text/javascript" src="src/Helpers/promotion.js"></script>
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
@@ -24,6 +25,7 @@
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/Models/item-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/discount-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/promotion-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
 </head>
 
