Add test for Formatter

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="src/Helpers/discount.js"></script>
     <script type="text/javascript" src="src/Helpers/promotion.js"></script>
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
+    <script type="text/javascript" src="src/Helpers/formatter.js"></script>
 
     <script type="text/javascript" src="src/main.js"></script>
 
@@ -28,6 +29,7 @@
     <script type="text/javascript" src="spec/Helpers/discount-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/promotion-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/formatter-spec.js"></script>
 </head>
 
 <body>
