Add test of Strategy

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="src/Helpers/promotion.js"></script>
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
+    <script type="text/javascript" src="src/Helpers/strategy.js"></script>
 
     <script type="text/javascript" src="src/main.js"></script>
 
@@ -30,6 +31,7 @@
     <script type="text/javascript" src="spec/Helpers/promotion-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/formatter-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/strategy-spec.js"></script>
 </head>
 
 <body>
