Fixed a lot of bugs

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -23,6 +23,9 @@
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
 
+    <script type="text/javascript" src="src/Factories/promotion_factory.js"></script>
+    <script type="text/javascript" src="src/Factories/strategy_factory.js"></script>
+
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
