Fixed the formatter-spec2

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
+    <script type="text/javascript" src="src/Helpers/benefit.js"></script>
 
     <script type="text/javascript" src="src/Factories/promotion_factory.js"></script>
     <script type="text/javascript" src="src/Factories/strategy_factory.js"></script>
