A lot of change

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -21,8 +21,9 @@
     <script type="text/javascript" src="src/Helpers/promotion.js"></script>
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
-    <script type="text/javascript" src="src/Helpers/strategy.js"></script>
     <script type="text/javascript" src="src/Helpers/benefit.js"></script>
+    <script type="text/javascript" src="src/Helpers/strategy.js"></script>
+
 
     <script type="text/javascript" src="src/Factories/promotion_factory.js"></script>
     <script type="text/javascript" src="src/Factories/strategy_factory.js"></script>
@@ -36,6 +37,8 @@
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/formatter-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/strategy-spec.js"></script>
+
+    <script type="text/javascript" src="spec/main-spec.js"></script>
 </head>
 
 <body>
