Split scope to 3 files

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -18,6 +18,9 @@
 
     <script type="text/javascript" src="src/Models/item.js"></script>
     <script type="text/javascript" src="src/Helpers/scope.js"></script>
+    <script type="text/javascript" src="src/Helpers/single_scope.js"></script>
+    <script type="text/javascript" src="src/Helpers/brand_scope.js"></script>
+    <script type="text/javascript" src="src/Helpers/full_scope.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/benefit.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
