--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -21,8 +21,10 @@
     <script type="text/javascript" src="src/Helpers/single_scope.js"></script>
     <script type="text/javascript" src="src/Helpers/brand_scope.js"></script>
     <script type="text/javascript" src="src/Helpers/full_scope.js"></script>
-    <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/benefit.js"></script>
+    <script type="text/javascript" src="src/Helpers/discount.js"></script>
+    <script type="text/javascript" src="src/Helpers/promotion.js"></script>
+    <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
 
 
