Split pretty methods from Strategy to Peeler

--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="src/Helpers/benefit.js"></script>
     <script type="text/javascript" src="src/Helpers/discount.js"></script>
     <script type="text/javascript" src="src/Helpers/promotion.js"></script>
+    <script type="text/javascript" src="src/Helpers/peeler.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
 
