--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="spec/Models/item-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/benefit-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/peeler-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/formatter-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/strategy-spec.js"></script>
 
