--- a/pos_v3/SpecRunner.html
+++ b/pos_v3/SpecRunner.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="src/Helpers/benefit.js"></script>
     <script type="text/javascript" src="src/Helpers/discount.js"></script>
     <script type="text/javascript" src="src/Helpers/promotion.js"></script>
-    <script type="text/javascript" src="src/Helpers/peeler.js"></script>
+    <script type="text/javascript" src="src/Helpers/convertor.js"></script>
     <script type="text/javascript" src="src/Helpers/formatter.js"></script>
     <script type="text/javascript" src="src/Helpers/strategy.js"></script>
 
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="spec/Models/item-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/scope-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/benefit-spec.js"></script>
-    <script type="text/javascript" src="spec/Helpers/peeler-spec.js"></script>
+    <script type="text/javascript" src="spec/Helpers/convertor-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/formatter-spec.js"></script>
     <script type="text/javascript" src="spec/Helpers/strategy-spec.js"></script>
 
